@@ -1,5 +1,8 @@
 Unreleased
 
+Added
+    Allow setting container settings when creating them (#57)
+
 Changed
     Redirect by default to https (#86)
 
